Fixed some layout issues, started implementing timeline tab and retrained the models without data leakage on validation set

--- a/indigenous_project/tainacan_collection/assets/style.css
+++ b/indigenous_project/tainacan_collection/assets/style.css
@@ -57,20 +57,20 @@ body {
     height: 90%;
     background-color: #f2f2f2;
     border-radius: 10px;
+    padding-top: 1.5%;
 }
 
 /* Title of the graph */
-.graph-title {
+/* .graph-title {
     text-align: center;
     color: #062a57;
-    /* border-bottom: 4px solid #9b3636; */
-}
+} */
 
 /* Div for the sidebar and graph */
 .sidebar-graph {
     display: flex;
-    width: 95%;
-    height: 80%;
+    width: 98%;
+    height: 90%;
     padding-left: 30px;
 }
 
@@ -78,10 +78,10 @@ body {
 .sidebar {
     width: 20%;
     margin-right: 20px;
-    margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: auto;
 }
 
 /* Toggle button */
@@ -125,10 +125,24 @@ input[type=number]::-webkit-outer-spin-button {
     padding-left: 10px;
 }
 
-/* Stylying dimensoes input */
+/* Stylying dimensoes input section */
 .filter-input {
     display: flex;
     align-items: center;
+}
+
+/* Stylying dimensoes input container */
+.input-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Stylying dimensoes input */
+.dash-input {
+    width: 60px;
+    margin-right: 10%;
 }
 
 /* Stylying dropdowns */
@@ -158,7 +172,7 @@ input[type=number]::-webkit-outer-spin-button {
 /* Div for the graph */
 .graph {
     width: 80%;
-    height: 70vh;
+    height: 75vh;
 }
 
 /* Graph, but from the Dash perspective */
@@ -201,6 +215,12 @@ input[type=number]::-webkit-outer-spin-button {
     align-items: center;
 }
 
+/* timeline from Dash perspective */
+#timeline {
+    width: 97%;
+    height: 95%;
+}
+
 /* Div for the map */
 .map-container {
     width: 90%;
@@ -212,7 +232,7 @@ input[type=number]::-webkit-outer-spin-button {
     align-items: center;
 }
 
-/* Map, but from the Dash perspective */
+/* Map from Dash perspective */
 #brazil-map {
     width: 97%;
     height: 95%;
